[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/game/PennywiseDrain.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 8 )

[node name="PennywiseDrain" type="Node2D"]
script = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 0, 16, 0, 8, 8, 0, 56, 0, 64, 8, 64, 16 )

[node name="ShipCaptureArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShipCaptureArea"]
position = Vector2( 32, 8 )
shape = SubResource( 1 )

[node name="kid_position" type="Position2D" parent="."]
position = Vector2( 32, 16 )

[node name="KidCaptureArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="KidCaptureArea"]
position = Vector2( 32, 16 )
shape = SubResource( 2 )
[connection signal="area_entered" from="KidCaptureArea" to="." method="_on_KidCaptureArea_area_entered"]
